# Compiladores

Practica1/: CMakeLists.txt  Definitions.h  ErrorManager.c  ErrorManager.h  InputSystem.c  InputSystem.h  LexicalAnalyzer.c  LexicalAnalyzer.h  SintacticAnalyzer.c  SintacticAnalyzer.h  SymbolsTable.h  e.txt  keywords.txt  main.c  makefile  out.txt  practica1
Practica1/SymbolsTable/: BST.c  BST.h  SymbolsTable.c  SymbolsTable.h
Practica2/: CMakeLists.txt  Definitions.h  ErrorManager.c  ErrorManager.h  LexicalAnalyzer.c  LexicalAnalyzer.h  README  SintacticAnalyzer.c  concurrentSum.go  flex1.l  flexFile.l  gramatica  lex.yy.c  main.c  makefile  out.txt  practica2
Practica2/SymbolsTable/: BST.h  SymbolsTable.c  SymbolsTable.h
Practica3/: CMakeLists.txt  ConsolaMatematicaV1.0  Definitions.c  Definitions.h  ErrorManager.c  ErrorManager.h  README  README.md  TODOS  compile.sh  consolaMatematica  consolaMatematica.l  consolaMatematica.tab.c  consolaMatematica.tab.h  consolaMatematica.y  demo.txt  detalles-08112017.txt  detalles-15112017.txt  lex.yy.c  lex.yy.h  main.c  makefile  valgrind.sh
Practica3/SymbolsTable/: BST.c  BST.h  SymbolsTable.c  SymbolsTable.h
Practica4/: a.out  ejercicio1.c  ejercicio2.c  informe.tex
Practica4/ejercicio2/: Resultados  ejercicio2.c  ejercicio2_Os_ensamblador.out  ejercicio2time.c  ensamblador.out  estatico.out  preprocesado.out
Practica4/ejercicio3/: diff.txt  ejercicio3.c  ejercicio3_O1_ensamblador.out  ejercicio3_O1_unroll_ensamblador.out  ejercicio3time.c  res.txt
Practica5/: README.txt  main.c  res.csv  script.sh
(+10 files in other folders)
